<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeGee</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update_zip">Update loki in zip</string>
    <string name="menu_reboot_recovery">Reboot Recovery</string>
    <string name="menu_reboot_bootloader">Reboot Bootloader</string>
    <string name="menu_shutdown">Shutdown</string>
    <string name="Description">Team Codefire proudly present, Project FreeGee-Easier-Than-Ever. This application is only for those running an LG Optimus G or Optimus G Pro and wish to unlock their device. Simply click the unlock button below and the process will start. This will void your warranty and no one on team Codefire not I can be held responsible for anything that comes as a result of unlocking. Please make sure your phone is over 15% on battery and do not touch the phone until the unlock process has completed. To restore your phone to a locked state, press the restore with backups button.</string>
    <string name="BtnText">Unlock my phone</string>
    <string name="RstText">Restore with backups</string>
    <string name="UpText">Upload boot image and device info</string>
    <string name="efs_text">Backup/Restore EFS</string>
    <string name="recovery">Select a recovery to install</string>
    <string name="uptitle">Upload Settings</string>
    <string name="DropBoxToggle">Enable DropBox</string>
    <string name="dbbtntxt">Force Sync with Dropbox</string>
    <string name="utilBtnTxt">FreeGee Utilities</string>
    <string name="miscBtnTxt">Attempt Misc Fix</string>
    <string name="download_failed">"Could not download file"</string>
    <string name="download_success">Download was successful</string>
    <string name="md5_verification_failed">MD5sum check failed</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more...</string>
    
    <string name="json_results">json_results</string>
</resources>