<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <Button
            android:id="@+id/efsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/efs_text" />

        <Button
            android:id="@+id/DbBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/efsBtn"
            android:layout_marginTop="144dp"
            android:text="@string/dbbtntxt"
            android:visibility="invisible" />

        <Button
            android:id="@+id/miscBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/efsBtn"
            android:layout_marginTop="37dp"
            android:text="@string/miscBtnTxt" />

</RelativeLayout>